# efficio-server

./: .travis.yml  Cargo.toml  README.md
backend/: Cargo.toml  Makefile.toml
backend/libs/fake_redis/: Cargo.toml
backend/libs/fake_redis/src/: fake_connection.rs
backend/src/: cli.rs  error.rs  main.rs
backend/src/db/: aisles.rs  ids.rs  mod.rs  products.rs  sessions.rs  stores.rs  users.rs
backend/src/endpoints/: aisle.rs  misc.rs  mod.rs  product.rs  routes.rs  session.rs  store.rs  user.rs
backend/static/: .gitignore  index.html  main.css
ci/: before_deploy.sh
frontend/: Cargo.toml  Makefile.toml
frontend/src/: lib.rs
libs/fake_redis/: Cargo.toml
libs/fake_redis/src/: fake_client.rs  fake_connection.rs  lib.rs
src/: aisle.rs  cli.rs  consts.rs  error.rs  helpers.rs  main.rs  product.rs  session.rs  sessions.rs  store.rs  token.rs  types.rs  user.rs
src/db/: aisles.rs  ids.rs  mod.rs  products.rs  salts.rs  sections.rs  sessions.rs  stores.rs  user.rs  users.rs
src/endpoints/: aisle.rs  misc.rs  product.rs  routes.rs  session.rs  store.rs  user.rs
