[package]
name = "efficio-server"
version = "0.1.0"
authors = ["Geobert Quach <geobert@protonmail.com>"]
edition = "2018"

[dependencies]
fake_redis = { path = "libs/fake_redis" }
warp = "0.1.20"
structopt = "0.3.4"
redis = "0.13.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_repr = "0.1.5"
failure = "0.1.6"
rand = "0.7.2"
argon2rs = "0.2.5"
lazy_static = "1.4.0"
hex-view = "0.1.3"
validator = "0.10.0"
validator_derive = "0.10.0"
zxcvbn = "2.0.0"
regex = "1.3.1"
derive_deref = "1.1.0"
derive-new = "0.5.8"
r2d2 = "0.8.6"
r2d2_redis = "0.12.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"
uuid = { version="0.8.1", features=["v4"] }




