[package]
name = "efficio-ui"
version = "0.1.0"
authors = ["Geobert Quach <geobert@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.64"
seed = { git = "https://github.com/seed-rs/seed", rev = "0a538f0" }
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen", "serde"] }
serde = "1.0.114"
